--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "passport-local": "^1.0.0",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
+    "react-parallax": "^0.4.3",
     "react-redux": "^4.4.5",
-    "react-router": "^1.0.3",
+    "react-router": "^2.4.1",
     "redux": "^3.5.2",
     "redux-form": "^5.2.5",
     "redux-promise": "^0.5.3",
