--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "jquery": "^2.2.3",
     "lodash": "^4.13.1",
     "mongoose": "^4.4.19",
-    "nodemon": "^1.9.2",
     "passport": "^0.3.2",
     "passport-jwt": "^2.0.0",
     "passport-local": "^1.0.0",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
+    "react-ga": "^2.1.1",
     "react-parallax": "^0.4.3",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
@@ -44,10 +44,11 @@
     "redux": "^3.5.2",
     "redux-form": "^5.2.5",
     "redux-promise": "^0.5.3",
+    "serve-favicon": "^2.3.0",
     "webpack": "^1.13.2"
   },
   "engines": {
-    "node": "6.3.1"
+    "node": "6.5.0"
   },
   "devDependencies": {
     "babel-loader": "^6.2.0",
@@ -66,6 +67,7 @@
     "eslint-plugin-react": "^5.2.2",
     "morgan": "^1.7.0",
     "node-sass": "^3.7.0",
+    "nodemon": "^1.10.2",
     "sass-loader": "^3.2.0",
     "webpack-dashboard": "0.0.1",
     "webpack-dev-middleware": "^1.6.1"
