init testimonials <-- need styling

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./server.js",
-    "dev": "webpack-dev-server --content-base public --host 192.168.1.109 --inline --hot --history-api-fallback",
+    "dev": "webpack-dev-server --content-base public --inline --hot --history-api-fallback",
     "deploy": "NODE_ENV=production webpack"
   },
   "repository": {
